# Grid2Grid

./: .gitignore  Additional licenses.txt  CMakeLists.txt  Grid2GridOptions.cmake  README.md  cbuild.org  makefile  postGrid2Grid.dict  postGrid2Grid.inp
HOSSurf2Vol/: HOSSurf2Vol.vfproj  makefile
HOSSurf2Vol/src/: Main.f90  libHOSSurf2Vol.f90  makefile  modAnalysis_wavefield_ocean.f90  modFourier_r2c_FFTW3_NWT.f90  modFourier_r2c_FFTW3_ocean.f90  modInput_post_process_NWT.f90  modInput_post_process_ocean.f90  modOutput_post_process_NWT.f90  modOutput_post_process_ocean.f90  modPost_processing_NWT.f90  modPost_processing_ocean.f90  modRead_files_NWT.f90  modRead_files_ocean.f90  modReconstruction_NWT.f90  modReconstruction_ocean.f90  modType.f90  modVariables_3d_NWT.f90  modVariables_3d_ocean.f90
auxiliary/bspline-fortran/: build.sh  makefile
config/: cleanTool.mk  config.mk
doc/: appendixCommGrid2Grid.tex  docSetting.tex  installation.tex  interface.tex  introduction.tex  makefile  manual.tex  modGrid2Grid.tex  postGrid2Grid.tex  programStructure.tex  reference.bib  releaseNotes.tex  surf2vol.tex  titleSet.tex  validation.tex  vol2vol.tex
example/: modes_HOS_SWENSE.hdf5
example/fortGrid2Grid/: Grid2Grid.dict  main.f90  modCommG2G.f90
example/ofGrid2Grid/: testGrid2Grid.C
example/ofGrid2Grid/Make/: files
example/ofGrid2GridDict/: Allclean  Allrun  interfaceGrid2Grid.H  interfaceGrid2GridFwd.H  ofGrid2GridDict.C
example/ofGrid2GridDict/Make/: files
example/ofGrid2GridDict/constant/: Grid2Grid.dict
example/ofGrid2GridDict/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
example/waves2Foam/: Implementation of Grid2Grid in waves2Foam.md
example/waves2Foam/Grid2Grid/: Grid2Grid.C  Grid2Grid.H
example/waves2Foam/Grid2GridProperties/: Grid2GridProperties.C  Grid2GridProperties.H
interface/fortGrid2Grid/: makefile
interface/ofGrid2Grid/: testGrid2Grid.C
interface/ofGrid2Grid/Make/: options
notes/development/: 2020-06-18_884bc06ab6ee0.md  2020-07-17_de05208d967b881e89.md
src/: main.f90  modFourier_r2c_FFTW3NWT.f90  modFourier_r2c_FFTW3_ocean.f90  modGrid2Grid.f90  modGrid2GridType.f90  modHDF5Interface.f90  modNWTsurf2vol.f90  modOceansurf2vol.f90  modPostGrid2Grid.f90  modSurf2Vol.f90  modV2VSplineInterp.f90  modVol2Vol.f90
src/libBspline/: CMakeLists.txt  makefile
src/libFyMc/: makefile
src/libFyMc/src/general/: makefile  mfpGeneral.f90
src/libFyMc/src/general/dictionary/: dictDataBase.inc  dictionary.typ  dictionaryPtr.inc  dictionaryPtr.typ  testDictionary.inc
src/libFyMc/src/general/fileIO/: fileIO.inc  fileIO.typ
src/libFyMc/src/general/sLookUpTable/: sLookUpTable.inc  sLookUpTable.typ
src/libFyMc/src/general/string/: string.inc  string.typ  stringI.inc  stringI.typ
src/libFyMc/src/geometry/: makefile
src/libFyMc/src/geometry/baseGeometry/: panel.inc  panel.typ
src/libFyMc/src/geometry/surfMesh/: surfMesh.inc  surfMesh.typ
src/libGrid2Grid/: CMakeLists.txt  main.f90  makefile  modGrid2Grid.f90  modGrid2GridGlobal.f90
src/libGrid2Grid/HDF5/: makefile  modHDF5Interface.f90
src/libGrid2Grid/auxiliary/: fileIO.inc  fileIO.typ  string.inc  zMesh.inc
src/libGrid2Grid/fftw3/: makefile  modFourier_r2c_FFTW3.f90
src/libGrid2Grid/fftw3/FFTW_NWT/: fftwHOSNWT.inc  fftwHOSNWT.typ
src/libGrid2Grid/fftw3/FFTW_Ocean/: fftwHOSOcean.inc  fftwHOSOcean.typ
src/libGrid2Grid/postGrid2Grid/: makefile  modPostGrid2Grid.f90
src/libGrid2Grid/postGrid2Grid/postGrid2Grid/: postGrid2Grid.inc  postGrid2Grid.typ
src/libGrid2Grid/postGrid2Grid/probes/: probes.inc  probes.typ
src/libGrid2Grid/postGrid2Grid/probes/probe/: probe.typ
src/libGrid2Grid/postGrid2Grid/rectilinearGrid/: rectilinearGrid.inc  rectilinearGrid.typ
src/libGrid2Grid/postGrid2Grid/waveProbe/: waveProbe.typ
src/libGrid2Grid/surf2Vol/: makefile  modNWTsurf2vol.f90  modOceansurf2vol.f90  modSurf2Vol.f90
src/libGrid2Grid/surf2Vol/HOSMesh/: hosMesh.inc  hosMesh.typ
src/libGrid2Grid/surf2Vol/HOSModeWeight/: hosModeWeight.inc  hosModeWeight.typ  testHOSModeWeight.inc
src/libGrid2Grid/surf2Vol/HOSModeWeight/hosWeightBaseFunc/: hosWeightBaseFunc.typ
src/libGrid2Grid/surf2Vol/HOSModeWeight/hosWeightExpFunc/: hosWeightExpFunc.inc  hosWeightExpFunc.typ
src/libGrid2Grid/surf2Vol/HOSModeWeight/hosWeightPolyFunc/: hosWeightPolyFunc.inc  hosWeightPolyFunc.typ
src/libGrid2Grid/surf2Vol/HOSModeWeight/hosWeightStepFunc/: hosWeightStepFunc.inc  hosWeightStepFunc.typ
src/libGrid2Grid/surf2Vol/HOSNWT/: hosNWT.inc  hosNWT.typ
src/libGrid2Grid/surf2Vol/HOSNWTMesh/: hosNWTMesh.inc  hosNWTMesh.typ
src/libGrid2Grid/surf2Vol/HOSNWTMode/: hosNWTMode.inc  hosNWTMode.typ
src/libGrid2Grid/surf2Vol/HOSOcean/: hosOcean.inc  hosOcean.typ
src/libGrid2Grid/surf2Vol/HOSOceanMesh/: hosOceanMesh.inc  hosOceanMesh.typ
src/libGrid2Grid/surf2Vol/HOSOceanMode/: hosOceanMode.inc  hosOceanMode.typ
src/libGrid2Grid/surf2Vol/HOSSurf2Vol/: hosSurf2Vol.inc  hosSurf2Vol.typ
src/libGrid2Grid/vol2Vol/: makefile  modV2VSplineInterp.f90  modVol2Vol.f90
src/libGrid2Grid/vol2Vol/HOSVol2Vol/: hosVol2Vol.inc  hosVol2Vol.typ
src/libGrid2Grid/vol2Vol/V2VInterp2D/: v2vInterp2D.inc  v2vInterp2D.typ
src/libGrid2Grid/vol2Vol/V2VInterp3D/: v2vInterp3D.inc  v2vInterp3D.typ
src/test/: testSpline.f90
testCode/fortGrid2Grid/: main.f90  makefile
testCode/ifortGrid2Grid/: main.f90  makefile  modCommG2G.f90
testCode/ofGrid2Grid/: testGrid2Grid.C
