###-------------------------------------------------------------------------###

cmake_minimum_required(VERSION 3.1)  #... Specify the minimum version for CMake

###-------------------------------------------------------------------------###

if(NOT WIN32)
  string(ASCII 27 Esc)
  set(ColourReset "${Esc}[m")
  set(ColourBold  "${Esc}[1m")
  set(Red         "${Esc}[31m")
  set(Green       "${Esc}[32m")
  set(Yellow      "${Esc}[33m")
  set(Blue        "${Esc}[34m")
  set(Magenta     "${Esc}[35m")
  set(Cyan        "${Esc}[36m")
  set(White       "${Esc}[37m")
  set(BoldRed     "${Esc}[1;31m")
  set(BoldGreen   "${Esc}[1;32m")
  set(BoldYellow  "${Esc}[1;33m")
  set(BoldBlue    "${Esc}[1;34m")
  set(BoldMagenta "${Esc}[1;35m")
  set(BoldCyan    "${Esc}[1;36m")
  set(BoldWhite   "${Esc}[1;37m")
endif()

###-------------------------------------------------------------------------###

set(COMPILE_LANGUAGE Fortran)                       #
set(CMAKE_Fortran_COMPILER /usr/bin/gfortran)       #... Fortran Compiler Path

###-------------------------------------------------------------------------###

set(PROJECT_NAME Grid2Grid)                         #... Project Name
set(PROJECT_COMPILE_PATH ${CMAKE_HOME_DIRECTORY})   #... COMPILE_PATH

project(${PROJECT_NAME} ${COMPILE_LANGUAGE})        # PROJECT NAME

###-------------------------------------------------------------------------###

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_COMPILE_PATH}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_COMPILE_PATH}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_COMPILE_PATH})
set(CMAKE_Fortran_MODULE_DIRECTORY ${PROJECT_COMPILE_PATH}/lib)

option(BUILD_OF_LIB "Build <libGrid2Grid.so> in $FOAM_USER_LIBBIN" OFF)

set(GRID2GRID_LIB_OUT ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
if (BUILD_OF_LIB)

    if (NOT "$ENV{FOAM_USER_LIBBIN}" STREQUAL "")
        set(GRID2GRID_LIB_OUT $ENV{FOAM_USER_LIBBIN})
    else()
        message("${BoldRed} ")
        message("   [ERROR] Not in OpenFOAM Environment... ")
        message("${ColourReset} ${Green}")
        message("   Wrong $FOAM_USER_LIBBIN path")
        message("")
        message("       $FOAM_USER_LIBBIN : " $ENV{FOAM_USER_LIBBIN})
        message("${ColourReset} ")
        message( FATAL_ERROR )
    endif()

endif()

message("${Yellow}")
message("    GRID2GRID LIBRARY OUT PATH ")
message("${Green}")
message("       - GRID2GRID_LIB_OUT  : " ${GRID2GRID_LIB_OUT})
message("${ColourReset}")

###-------------------------------------------------------------------------###

#... HDF5 library path ( /usr/local/lib/hdf5 is generated by soft link )
set(HDF5_LIB_PATH /usr/local/lib/hdf5/build/bin)
#set(HDF5_LIB_PATH /usr/local/lib/hdf5/build)

#... HDF5 library header file path
set(HDF5_INC_PATH ${HDF5_LIB_PATH}/static)

#... HDF5 LIBRARY FLAG (DO NOT CHANGE ORDER !)
set(HDF5_LIB_NAME
    libhdf5_fortran.a
    libhdf5_f90cstub.a
    libhdf5.a
    libszip.a
    libz.a
)

#...FFTW library path ( /usr/local/lib/libfftw3.a is generated by soft link )
set(FFTW3_LIB_PATH /usr/local/lib)

###-------------------------------------------------------------------------###
###                         Check Library                                   ###
###-------------------------------------------------------------------------###

set(HDF_LIBRARY "OFF" CACHE STRING "OFF")

message("${Yellow}")
message("    GRID2GRID EXTERNAL LIBRARY PATH ")
message("${Green}")
if (HDF_LIBRARY MATCHES "ON")
message("       - HDF5_LIB_PATH  : " ${HDF5_LIB_PATH})
message("       - HDF5_INC_PATH  : " ${HDF5_INC_PATH})
endif()
message("       - FFTW3_LIB_PATH : " ${FFTW3_LIB_PATH})
message("${ColourReset}")


if (HDF_LIBRARY MATCHES "ON")

#... Check HDF5 library existence and add library to HDF5_LIB_FLAG
foreach(LIB ${HDF5_LIB_NAME})
    find_library(LIBEXIST NAMES ${LIB} PATHS ${HDF5_LIB_PATH})
    if (NOT LIBEXIST)
        message("${BoldYellow}   [WARNING] library: " ${LIB} " not found. ${ColourReset}")
        set(HDF_LIBRARY "OFF")
    endif()
    set(HDF5_LIB_FLAG ${HDF5_LIB_FLAG} ${HDF5_LIB_PATH}/${LIB})
endforeach()
message("${ColourReset}")

set(HDF5_LIB_FLAG ${HDF5_LIB_FLAG} -ldl -pthread)
add_definitions(-DENABLE_HDF5=${HDF_LIBRARY})

endif()

message("${Green}")
message("    HDF LIBRARY STATUS :  " ${HDF_LIBRARY})
message("${ColourReset}")

###-------------------------------------------------------------------------###

find_library(LIBEXIST NAMES libfftw3.a PATHS ${FFTW3_LIB_PATH})
if (NOT LIBEXIST)
    message("${BoldRed} ")
    message("   [ERROR] library:  libfftw3.a not found.")
    message("${ColourReset} ${Green}")
    message("   Wrong FFTW3 library path")
    message("")
    message("       FFTW3_LIB_PATH : " ${FFTW3_LIB_PATH})
    message("${ColourReset} ")
    message( FATAL_ERROR )
endif()
#... FFTW LIBRARY FLAG
set(FFTW_LIB_FLAG ${FFTW3_LIB_PATH}/libfftw3.a )

###-------------------------------------------------------------------------###

#... -fPIC is needed to generate shared library
set(CMAKE_Fortran_FLAGS "-fPIC")

add_subdirectory(src/libBspline)
add_subdirectory(src/libFyMc)
add_subdirectory(src/libGrid2Grid)
